--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div id="buttonContainer">
-    <button>:)</button>
+    <button>Click</button>
     <button>Click</button>
     <button>Click</button>
     <button>Click</button>
