--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="headingContainer">
     <h1 id="magic">MAGIC</h1>
     <h2>Buttons</h2>
+    <h3>Watch them change</h3>
     </div>
 
     <div id="buttonContainer">
